# rs-batch

./: Cargo.toml  README.md  README.zh_CN.md  ci-check.sh
.circleci/: config.yml
src/: batch_execution_error.rs  batch_execution_result.rs  batch_task_error.rs  batch_task_failure.rs  lib.rs
src/error/: batch_execution_error.rs  batch_execution_result.rs  batch_execution_result_build_error.rs  batch_task_error.rs  batch_task_failure.rs  mod.rs
src/execute/: batch_call_result.rs  batch_execution_error.rs  batch_execution_state.rs  batch_executor.rs  batch_outcome.rs  batch_outcome_build_error.rs  batch_outcome_builder.rs  batch_task_error.rs  batch_task_failure.rs  callable_task.rs  for_each_task.rs  mod.rs
src/execution/: batch_execution_state.rs  batch_outcome.rs  batch_outcome_build_error.rs  batch_outcome_builder.rs  mod.rs
src/executor/: batch_call_result.rs  batch_executor.rs  callable_task.rs  for_each_task.rs  mod.rs  parallel_batch_executor.rs  parallel_batch_executor_build_error.rs  parallel_batch_executor_builder.rs  sequential_batch_executor.rs
src/process/: batch_process_error.rs  batch_process_result.rs  batch_process_result_build_error.rs  batch_process_result_builder.rs  batch_process_state.rs  batch_processor.rs  chunked_batch_process_error.rs  mod.rs
src/processor/: batch_process_result.rs  batch_processor.rs  chunked_batch_process_error.rs  chunked_batch_processor.rs  mod.rs  parallel_batch_processor.rs  sequential_batch_processor.rs
src/progress/: console_progress_reporter.rs  logger_progress_reporter.rs  mod.rs  no_op_progress_reporter.rs  progress_format.rs  progress_reporter.rs  writer_progress_reporter.rs
src/runtime/: mod.rs  scoped_parallel_runner.rs
src/state/: batch_counter.rs  batch_execution_state.rs  batch_process_state.rs  mod.rs
src/utils/: mod.rs
tests/: lib_tests.rs  mod.rs
tests/docs/: mod.rs  readme_tests.rs
tests/error/: batch_execution_error_tests.rs  batch_execution_result_build_error_tests.rs  batch_execution_result_tests.rs  batch_outcome_tests.rs  batch_task_error_tests.rs  batch_task_failure_tests.rs  mod.rs
tests/execute/: batch_execution_state_tests.rs  batch_executor_tests.rs  batch_outcome_build_error_tests.rs  batch_outcome_tests.rs  batch_task_error_tests.rs  callable_task_tests.rs  for_each_task_tests.rs  mod.rs
tests/execution/: batch_execution_state_tests.rs  batch_outcome_build_error_tests.rs  batch_outcome_builder_tests.rs  mod.rs
tests/executor/: batch_call_result_tests.rs  batch_execution_error_tests.rs  batch_execution_result_tests.rs  batch_executor_tests.rs  callable_task_tests.rs  for_each_task_tests.rs  mod.rs  parallel_batch_executor_builder_tests.rs  parallel_batch_executor_tests.rs  sequential_batch_executor_tests.rs
tests/process/: batch_process_error_tests.rs  batch_process_result_builder_tests.rs  batch_process_result_tests.rs  batch_process_state_tests.rs  batch_processor_tests.rs  chunked_batch_process_error_tests.rs  mod.rs
(+66 files in other folders)
