[package]
name = "qubit-batch"
version = "0.5.2"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-batch"
description = "One-shot batch execution and processing with sequential and scoped parallel utilities"
homepage = "https://github.com/qubit-ltd/rs-batch"
documentation = "https://docs.rs/qubit-batch"
readme = "README.md"
keywords = ["batch", "progress", "executor", "parallel", "processing"]
categories = ["concurrency", "development-tools"]
exclude = [
    ".gitignore",
    ".gitmodules",
    ".rs-ci/**",
    "coverage.sh",
    "check-coverage-thresholds.sh",
    ".circleci/*",
    "align-ci.sh",
    "ci-check.sh",
    "style-check.sh",
]

[lib]
name = "qubit_batch"
doctest = true

[dependencies]
crossbeam-queue = "0.3"
thiserror = "2.0"

qubit-atomic = "0.10"
qubit-function = "0.12.0"
qubit-progress = "0.4"
