[package]
name = "qubit-batch"
version = "0.6.0"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-batch"
description = "One-shot batch execution and processing with sequential and scoped parallel utilities"
homepage = "https://github.com/qubit-ltd/rs-batch"
documentation = "https://docs.rs/qubit-batch"
readme = "README.md"
keywords = ["batch", "progress", "executor", "parallel", "processing"]
categories = ["concurrency", "development-tools"]
exclude = [
    "align-ci.sh",
    "ci-check.sh",
    "coverage.sh",
    "style-check.sh",
    "update-submodule.sh",
    ".github/*",
    ".llvm-cov.toml",
    ".cargo-audit.toml.example",
]

[lib]
name = "qubit_batch"
doctest = true

[dependencies]
crossbeam-queue = "0.3"
thiserror = "2.0"

qubit-atomic = "0.10"
qubit-function = "0.13"
qubit-progress = "0.4"
