[package]
name = "qubit-batch"
version = "0.8.1"
edition = "2024"
rust-version = "1.94"
authors = ["Haixing Hu <starfish.hu@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/qubit-ltd/rs-batch"
description = "One-shot batch execution and processing with sequential and scoped parallel utilities"
homepage = "https://github.com/qubit-ltd/rs-batch"
documentation = "https://docs.rs/qubit-batch"
readme = "README.md"
keywords = ["batch", "progress", "executor", "parallel", "processing"]
categories = ["concurrency", "development-tools"]
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/README.zh_CN.md",
    "/RUST_CODING_STYLE.md",
    "/RUST_CODING_STYLE.zh_CN.md",
    "/doc/**/user_guide*.md",
    "/examples/**",
    "/resources/**",
    "/src/**",
    "/tests/**",
]

[lib]
name = "qubit_batch"
doctest = true

[dependencies]
crossbeam-queue = "0.3"
thiserror = "2.0"

qubit-atomic = "0.13"
qubit-function = "0.14"
qubit-progress = "0.4"
